--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@
 !/log/.keep
 !/tmp/.keep
 /z-help.txt
+/first_stage.txt
+/config/secrets.yml
 
 # Ignore Byebug command history file.
 .byebug_history
