--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,14 @@ storage/*
 # Ignore application configuration
 /config/application.yml
 
-# Mac finder artifacts
-.DS_Store
-
 /_work
+
+/public/assets
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
