add sidekiq scheduler

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -8,7 +8,10 @@
     - restock_job
     - preorder_job
     - abandoned_job
+    - insint_job
 :max_retries: 3
+:scheduler:
+  :dynamic: true
 
 development:
   :concurrency: 5
