change cron to whenever

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -10,8 +10,8 @@
     - abandoned_job
     - insint_job
 :max_retries: 3
-:scheduler:
-  :dynamic: true
+# :scheduler:
+#   :dynamic: true
 
 development:
   :concurrency: 5
