--- a/config/sidekiq_scheduler.yml
+++ b/config/sidekiq_scheduler.yml
@@ -1,11 +1,12 @@
-restock_send_email:
-  cron: "0 0 * * * *" #every hour
-  class: "RestockScheduler"
-  queue: "restock_job"
-log_files:
-  cron: "45 23 * * *" #at 23-45
-  class: "CreateLogFilesScheduler"
-  queue: "default"
+# restock_send_email:
+#   cron: "0 0 * * * *" #every hour
+#   class: "RestockScheduler"
+#   queue: "restock_job"
+# log_files:
+#   cron: "45 23 * * *" #at 23-45
+#   class: "CreateLogFilesScheduler"
+#   queue: "default"
+#  
 # delete_unattached_blobs_every_day:
 #   cron: "15 23 * * *" #at 23-15
 #   class: "DeleteUnattachedBlobsScheduler"
