--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -10,7 +10,7 @@
     - abandoned_job
     - insint_job
     - bulk_delete
-# :max_retries: 3
+:max_retries: 3
 :scheduler:
   :dynamic: true
 
@@ -19,4 +19,4 @@ development:
 staging:
   :concurrency: 10
 production:
-  :concurrency: 50
+  :concurrency: 30
