--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "autoprefixer": "^10.4.19",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "esbuild": "^0.23.0",
+    "dompurify": "^3.2.5",
+    "esbuild": "^0.25.2",
     "nodemon": "^3.1.4",
     "postcss": "^8.4.39",
     "postcss-cli": "^11.0.0",
